# cs61a-fa24

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
.github/workflows/: tests.yaml
hw/hw01/: hw01.py
hw/hw02/: hw02.py
hw/hw03/: hw03.py
hw/hw04/: hw04.py
hw/hw05/: construct_check.py  hw05.py
hw/hw06/: hw06.py
lab/lab00/: lab00.py
lab/lab01/: lab01.py
lab/lab01/tests/: return-and-print.py
lab/lab02/: lab02.py
lab/lab02/tests/: hof-wwpd.py
lab/lab03/: lab03.py
lab/lab03/tests/: list-comprehensions-wwpd.py  lists-wwpd.py
lab/lab04/: lab04.py
lab/lab04/tests/: pokemon.py
lab/lab05/: lab05.py
lab/lab05/tests/: iterators-wwpd.py  list-mutation.py
lab/lab06/: cards.py  classes.py  lab06.py
lab/lab07/: lab07.py
lab/lab07/tests/: inheritance-abc.py  link.py
lab/lab08/: lab08.py
lab/lab08/tests/: trees-wwpd.py
lab/lab09/editor/: __main__.py  arithmetic.py  console.py  css_colors.py  database.py  datamodel.py  documentation.py  environment.py  evaluate_apply.py  execution.py  execution_parser.py  file_manager.py  format_parser.py  formatter.py  graphics.py  helper.py  lexer.py  lists.py  local_server.py  log.py  ok_interface.py  persistence.py  primitives.py  scheme_exceptions.py  special_forms.py  type_checking.py  visualizing.py  web_server.py
lab/lab09/tests/: combinations.py  composed.py  gcd.py  make_adder.py  over_or_under.py  repeat.py
project/ants/: ants.py  ants_plans.py  gui.py
project/ants/tests/: 00.py  01.py  (+20 more)
project/cats/: cats.py  cats_gui.py  score.py  utils.py
project/hog/: hog.py  hog_gui.py  hog_ui.py
(+193 files in other folders)
