[project]
name = "cs61a-fa24"
version = "0.1.0"
description = "The solutions to the labs, homeworks and projects auditing the CS61a Fall 2024."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []


[project.optional-dependencies]

[[tool.uv.index]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple"

[dependency-groups]
dev = [
    "coverage>=7.8.0",
    "mypy>=1.15.0",
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
]
docs = [
    "mkdocs-gen-files>=0.5.0",
    "mkdocs-literate-nav>=0.6.2",
    "mkdocs-material>=9.6.12",
    "mkdocstrings>=0.29.1",
]
lint = [
    "ruff>=0.11.7",
]

[tool.ruff]
line-length = 88
target-version = "py311"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
    "N",  # pep8-naming
    "YTT", # flake8-2020
    "RUF", # ruff-specific rules
]
ignore = ["RUF001", "RUF003"]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
line-ending = "auto"

[tool.ruff.per-file-ignores]
"tests/*" = ["S101"]  # Allow use of `assert` in tests

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
no_implicit_optional = true
disallow_untyped_defs = true
